# banking-system

./: CMakeLists.txt  README.md  account.cpp  account.ui  background.qrc  balance_check.ui  bankingwindow.cpp  bankingwindow.h  bankingwindow.ui  deposit.cpp  deposit.h  deposit.ui  funds  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapping.cpp  mapping.h  menu.cpp  menu.h  menu.ui  modify_files.cpp  modify_files.h  new_action.cpp  new_action.h  new_action.ui  username  withdrawal.h
data/: funds  passwords
headers/: account.h  balance_check.h  bankingwindow.h  deposit.h  global.h  mainwindow.h
sources/: balance_check.cpp  bankingwindow.cpp  main.cpp  menu.cpp  modify_files.cpp  withdrawal.cpp
ui/: bankingwindow.ui  deposit.ui  menu.ui  withdrawal.ui
